# newmap

./: .gitignore  .gitmodules  .readthedocs.yml  MANIFEST.in  README.md  build_libraries.sh  pyproject.toml  setup.py
.github/workflows/: continuous-integration-workflow.yml  python-publish.yml
docs/source/: commands.rst  conf.py  credits.rst  index.rst  umap.rst  unique_format.rst  usage.rst
newmap/: count_kmers.py  fasta.py  generate_index.py  main.py  search.py  unique_counts.py  unique_counts_conversion.py  util.py
src/: newmap-count.c  newmap-generate-index.c
tests/: run_all.sh  test_count_kmers.py  test_end_to_end.sh  test_index_generation.py  test_sequence_buffer_iter.py  test_unique_counts.py  test_unique_to_mappability.py  test_upper_search_bound_truncation.py  util.py
tests/data/: genome.fa
