[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Eric Roberts", email = "eric.roberts@uhn.ca"},
  {name = "Michael Hoffman", email = "michael.hoffman@utoronto.ca"},
]
classifiers = [
  "Natural Language :: English",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: Unix",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy",
]
description = "Newmap: tools for genome and methylome mappability"
dynamic = ["version"]
name = "newmap"
readme = "README.md"
requires-python = ">=3.9"

[project.license]
text = "GPL-3.0-only"

[project.scripts]
newmap = "newmap.main:parse_subcommands"

[project.urls]
"Bug Tracker" = "https://github.com/hoffmangroup/newmap/issues"
"Download" = "https://pypi.python.org/pypi/newmap"
"Homepage" = "https://hoffmanlab.org/proj/newmap"

[tool.setuptools]
packages = ["newmap"]

# Enable version inference from scm
[tool.setuptools_scm]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
combine_star = true
float_to_top = true
force_single_line = false
profile = "google"
py_version = 3

[tool.cibuildwheel]
# Only build on CPython 3.9 as minimum targeted abi
build = "cp39-manylinux_x86_64"
